--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,11 @@
         <artifactId>shiro-ehcache</artifactId>
         <version>${shiro.version}</version>
       </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-cas</artifactId>
+          <version>1.2.0</version>
+      </dependency>
   </dependencies>
   <build>
         <plugins>
