--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -52,6 +52,19 @@
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
 
+    <!-- 单点登出 -->
+    <filter>
+        <filter-name>singleSignOutFilter</filter-name>
+        <filter-class>org.jasig.cas.client.session.SingleSignOutFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>singleSignOutFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <listener>
+        <listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class>
+    </listener>
+
     <!-- springmvc 控制器 -->
     <servlet>
         <servlet-name>springmvc</servlet-name>
