--- a/src/main/conf/dev/jdbc.properties
+++ b/src/main/conf/dev/jdbc.properties
@@ -1,7 +1,7 @@
 #jdbc.driver=com.mysql.jdbc.Driver
 master_driverUrl=jdbc:mysql://localhost:3306/shiro?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
 master_username=root
-master_password=root
+master_password=
 
 slave_driverUrl=jdbc:mysql://localhost:3306/wechat?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true
 slave_username=root
