--- a/src/main/resources/properties/sso.properties
+++ b/src/main/resources/properties/sso.properties
@@ -2,4 +2,4 @@
 sso.secretkey=Lg8V51188n0709i5l8
 sso.cookie.name=uid
 sso.cookie.domain=.test.com
-sso.login.url=http://shiro.test.com:8080/login.html
+sso.login.url=http://shiro.test.com:8080/login
