--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,10 @@
 		<location>/error/404.html</location>
 	</error-page>
 	<error-page>
+		<error-code>403</error-code>
+		<location>/error/403.html</location>
+	</error-page>
+	<error-page>
 		<error-code>500</error-code>
 		<location>/error/500.html</location>
 	</error-page>
