--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
     </dependencies>
 
     <build>
-        <finalName>shiro</finalName>
+        <finalName>${project.artifactId}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
